src/test/resources/integration-test/arrays/empty-pop.expect

An error occurred:
empty-pop.twl
Error at line 5 character 28.
Cannot pop array of size 0.
