src/test/resources/integration-test/arrays/empty-pop.twl

import <arrays>
import <stack>

[ 1 ] arrays.pop stack.pop arrays.pop
